salesforce/force-app/main/default/objects/RY_Programme_Enquiry__c/RY_Programme_Enquiry__c.object-meta.xml
<CustomObject><deploymentStatus>Deployed</deploymentStatus><description>Proposed Red and Yellow demonstration model; not verified against an existing org.</description><enableReports>true</enableReports><label>RY Programme Enquiry</label><nameField><displayFormat>RY-{000000}</displayFormat><label>Programme Enquiry Number</label><type>AutoNumber</type></nameField><pluralLabel>RY Programme Enquiry Records</pluralLabel><sharingModel>ReadWrite</sharingModel></CustomObject>