salesforce/force-app/main/default/objects/RY_Programme_Enquiry__c/fields/Channel__c.field-meta.xml
<CustomField><fullName>Channel__c</fullName><label>Channel</label><length>255</length><required>false</required><type>Text</type></CustomField>