salesforce/force-app/main/default/objects/RY_Programme_Enquiry__c/fields/Contact__c.field-meta.xml
<CustomField><fullName>Contact__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Contact</label><referenceTo>Contact</referenceTo><relationshipLabel>Contact Records</relationshipLabel><relationshipName>RY_Programme_Enquiry_Contact</relationshipName><required>false</required><type>Lookup</type></CustomField>