salesforce/force-app/main/default/objects/RY_Programme_Enquiry__c/fields/Enquiry_Date__c.field-meta.xml
<CustomField><fullName>Enquiry_Date__c</fullName><label>Enquiry Date</label><required>false</required><type>Date</type></CustomField>