salesforce/force-app/main/default/objects/RY_Programme_Enquiry__c/fields/Lead__c.field-meta.xml
<CustomField><fullName>Lead__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Lead</label><referenceTo>Lead</referenceTo><relationshipLabel>Lead Records</relationshipLabel><relationshipName>RY_Programme_Enquiry_Lead</relationshipName><required>false</required><type>Lookup</type></CustomField>