salesforce/force-app/main/default/objects/RY_Programme_Enquiry__c/fields/Offering__c.field-meta.xml
<CustomField><fullName>Offering__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Offering</label><referenceTo>RY_Programme_Offering__c</referenceTo><relationshipLabel>Offering Records</relationshipLabel><relationshipName>RY_Programme_Enquiry_Offering</relationshipName><required>false</required><type>Lookup</type></CustomField>